Closed
Bug 1342727
Opened 9 years ago
Closed 9 years ago
TIAS issues with the webrtc49 update (FF53+)
Categories
(Core :: WebRTC: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla54
| Tracking | Status | |
|---|---|---|
| firefox54 | --- | fixed |
People
(Reporter: jesup, Assigned: jesup)
References
Details
Attachments
(1 file)
|
6.22 KB,
patch
|
drno
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1332031 +++
The report this is cloned from discussed getting no video in 53 with TIAS. While investigating another bug, I hit assertions that indicated that there was a kbps vs bps bug in VideoConduit.cpp with TIAS.
To solve the issue, and avoid future ones, I've finished the conversion of all vars in VideoConduit to bps.
| Assignee | ||
Comment 1•9 years ago
|
||
MozReview-Commit-ID: CQrvswMkh7G
| Assignee | ||
Updated•9 years ago
|
Attachment #8841293 -
Flags: review?(drno)
| Assignee | ||
Comment 2•9 years ago
|
||
Try run in bug 1337777
Comment 3•9 years ago
|
||
Comment on attachment 8841293 [details] [diff] [review]
Handle all bitrates in VideoConduit as bps, instead of mix of kbps and bps
Review of attachment 8841293 [details] [diff] [review]:
-----------------------------------------------------------------
LGTM
Attachment #8841293 -
Flags: review?(drno) → review+
Pushed by rjesup@wgate.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/101f277fa881
Handle all bitrates in VideoConduit as bps, instead of mix of kbps and bps r=drno
Comment 5•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in
before you can comment on or make changes to this bug.
Description
•