Bug 1342727: Handle all bitrates in VideoConduit as bps, instead of mix of kbps and bps r=drno

MozReview-Commit-ID: CQrvswMkh7G